# diffuse

./: .gitignore  .pdbrc  .readthedocs.yml  MANIFEST.in  README.md  __init__.py  diffusion_tutorial.ipynb  main.py  pyproject.toml  requirements.txt  sandbox.ipynb  sandbox_geoffroy.ipynb  script_continuous_exp.batch  setup.py  test.md  tmp.py
.github/workflows/: ci.yml  docs.yml  publish-to-pypi.yml
diffuse/: __init__.py  base_forward_model.py  bayesian_design.py  conditional.py  data_loader.py  filter.py  images.py  inference.py  mixture.py  mnsit_train.py  neural_networks.py  optimizer.py  plotting.py  predictor.py  score_matching.py  sde.py  train.py  unet.py
diffuse/denoisers/: base.py  cond_denoiser.py  cond_tweedie.py  cond_tweediepp.py  denoiser.py  pnp_denoiser.py  utils.py
diffuse/design/: bayesian_design.py  others.py
diffuse/diffusion/: score_matching.py  sde.py  timestep.py
diffuse/integrator/: __init__.py  base.py  deterministic.py  stochastic.py
diffuse/neural_network/: SDvae.py  __init__.py  autoencoderKL.py  block.py  decoder.py  encoder.py  losses.py  unet.py  unet_old.py  unett.py
diffuse/samplopt/: cond_denoiser.py  conditional.py  inference.py  optimizer.py
diffuse/samplot/: inference.py
diffuse/timer/: __init__.py  base.py
diffuse/utils/: mapping.py  plotting.py
docs/: .readthedocs.yaml  Makefile  build.py  conf.py  diffusion_crash_course.rst  diffusion_tutorial.ipynb  flux_tutorial.ipynb  index.rst  installation.rst  mnist_tutorial.ipynb  quickstart.rst  references.bib  requirements-docs.txt  requirements.txt
docs/api/: cond_denoisers.rst  denoiser.rst  diffusion.rst  forward_models.rst  integrators.rst  neural_networks.rst  (+1 more)
images/: csv_plotter.py  design_mnist.py
sandbox/: mixture_evolution.py
test/: config.py  conftest.py  test_cond.py  test_cond_gaussian.py  test_diffusion.py  test_filter.py  test_image.py  test_image_forward.py  test_mnist.py  test_sde.py  test_sde_cond.py  test_sde_mixture.py  test_utils.py
vraie_vie/: base.err  base.out  continuous_training_wmh.py  create_dataset.py  design_wmh.py  evaluate_wmh.slurm  evaluation_wmh.py  evalutation_wmh.py  mni_coregistration.py  sliced.err  sliced.out  train_wmh.py  train_wmh.slurm  train_wmh.slurm_1600446.err  training.py  utils.py
(+148 files in other folders)
